# photo-organizer

./: .gitignore  CHANGELOG.md  LICENSE  PUSH_TEST.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  tests.yml
photo_organizer/: cli.py  cli.py.bak
tests/: test_basic.py  test_cli_move.py
