[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-organizer-cli"
version = "0.1.1"
description = "Organize photos into folders by date."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9",
  "Pillow>=10.0",
  "rich>=13.0",
]

[project.scripts]
photo-organizer = "photo_organizer.cli:cli"

[project.optional-dependencies]
dev = ["pytest"] 

[tool.setuptools]
packages = ["photo_organizer"]
